--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ marketing:
   seo:
     site_type: Organization
     local_business_type: ''
-    org_name: ''
+    org_name: '人工智能安全研究实验室·上海交通大学'
     description: ''
     twitter: ''
   analytics:
